Reset img and ul

--- a/css-reset.css
+++ b/css-reset.css
@@ -45,3 +45,12 @@ h1, h2, h3, h4, h5, h6 {
 #root, #__next {
   isolation: isolate;
 }
+
+img {
+    width: 3rem
+}
+
+ul {
+    list-style-type: none;
+    padding: 0;
+}
