--- a/style.css
+++ b/style.css
@@ -6,10 +6,17 @@
 	--main-font: "Open Sans", sans-serif;
 	--icon-size: 1.7rem;
 	--avatar-size: 3rem;
+	--sidebar-left-margin: 1.7rem;
 }
 
 body {
 	font-family: var(--main-font);
+}
+
+/*To make SVG logos white*/
+.filter-white {
+	filter: invert(100%) sepia(5%) saturate(470%) hue-rotate(257deg)
+		brightness(118%) contrast(100%);
 }
 
 /* General Grid layout */
@@ -26,6 +33,12 @@ body {
 	background-color: var(--primary-clr);
 	grid-area: nav;
 	display: grid;
+	z-index: 1;
+
+	box-shadow: 0px 4px 5px 1px rgba(0, 0, 0, 0.09);
+	-webkit-box-shadow: 0px 4px 5px 1px rgba(0, 0, 0, 0.09);
+	-moz-box-shadow: 0px 4px 5px 1px rgba(0, 0, 0, 0.09);
+
 	grid-template-columns: minmax(300px, 3fr) minmax(200px, 1fr);
 	grid-template-rows: minmax(40px, 80px) minmax(50px, 100px);
 	grid-template-areas:
@@ -101,7 +114,7 @@ body {
 			p {
 				grid-area: greet;
 				align-content: end;
-				font-weight: 600;
+				font-weight: 700;
 			}
 
 			h1 {
@@ -130,6 +143,42 @@ body {
 .sidebar {
 	background-color: var(--secondary-clr);
 	grid-area: sidebar;
+	color: var(--primary-clr);
+
+	.title-container {
+		margin-left: var(--sidebar-left-margin);
+		margin-top: 1.5rem;
+		display: flex;
+		gap: 1rem;
+	}
+
+	.links-container {
+		margin-left: 2.6rem;
+		margin-top: 2rem;
+		display: flex;
+		flex-direction: column;
+		gap: 70px;
+
+		ul {
+			display: grid;
+			grid-auto-rows: 50px;
+
+			li {
+				display: flex;
+				align-items: center;
+				gap: 1.5rem;
+
+				img {
+					width: 1.5rem;
+				}
+
+				p {
+					font-size: 1.3rem;
+					font-weight: 600;
+				}
+			}
+		}
+	}
 }
 
 .main-dashboard {
